--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -1,8 +1,8 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/backoffice?schema=public
+DATABASE_URL=postgresql://postgres:postgres@db:5432/backoffice?schema=public
 PORT=4000
-JWT_SECRET=change_me_for_dev
+JWT_SECRET=insecure_dev_secret_change_me
 APP_ORIGIN=http://localhost:3000
-RPC_URL=http://localhost:8545
+RPC_URL=http://host.docker.internal:8545
 REWARD_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
 VALIDATOR_OPERATOR_ADDRESS=0x0000000000000000000000000000000000000000
 CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
