--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "tsc -p tsconfig.build.json",
+    "prebuild": "pnpm prisma:generate",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
+    "prisma:push": "prisma db push",
     "prisma:migrate-dev": "tsx --env-file=.env prisma migrate dev"
   },
   "dependencies": {
