--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -1,10 +1,8 @@
 DATABASE_URL=postgresql://postgres:postgres@db:5432/backoffice?schema=public
 PORT=4000
-JWT_SECRET=insecure_dev_secret_change_me
-APP_ORIGIN=http://localhost:3000
-RPC_URL=http://host.docker.internal:8545
-REWARD_CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
-VALIDATOR_OPERATOR_ADDRESS=0x0000000000000000000000000000000000000000
-CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
-POLL_INTERVAL_MS=30000
-START_BLOCK=0
+JWT_SECRET=change_me_for_dev
+APP_ORIGIN=http://localhost:5173,http://localhost:3000
+RPC_URL=https://rpc.mitosis.org/
+REWARD_CONTRACT_ADDRESS=0x124816321ac3a7F3A68Cf2D36876e670beaBC6c7
+VALIDATOR_OPERATOR_ADDRESS=0xb302a07181efe734d96de4e3e5efbd18dc90f2a8
+DEV_AUTH_BEARER_TOKEN=dummy_token
