--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json --resolve-full-paths --resolve-full-extension .js",
     "prebuild": "pnpm prisma:generate",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
@@ -16,20 +16,22 @@
   "dependencies": {
     "@fastify/cors": "^10.0.0",
     "@fastify/jwt": "^10.0.0",
-    "@fastify/sensible": "^5.5.0",
     "@prisma/client": "^6.16.3",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "ethers": "^6.15.0",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
-    "zod": "^4.1.11",
-    "pino-pretty": "^11.2.2"
+    "node-schedule": "^2.1.1",
+    "pino-pretty": "^11.2.2",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
+    "@types/node-schedule": "^2.1.7",
     "@types/node": "^22.9.0",
     "prisma": "^6.16.3",
+    "tsc-alias": "^1.8.10",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
