--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: backoffice
     ports:
-      - "5432:5432"
+      - "7432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d backoffice"]
       interval: 5s
@@ -15,6 +15,8 @@ services:
       start_period: 10s
     volumes:
       - db-data:/var/lib/postgresql/data
+    networks:
+      - backoffice-network
 
   backend:
     build:
@@ -32,20 +34,28 @@ services:
     ports:
       - "4000:4000"
     restart: unless-stopped
+    networks:
+      - backoffice-network
 
   frontend:
     build:
       context: .
       dockerfile: frontend/Dockerfile
       args:
-        VITE_API_URL: http://backend:4000
+        VITE_API_URL: http://localhost:4000
     depends_on:
       backend:
         condition: service_started
     ports:
       - "3000:80"
     restart: unless-stopped
+    networks:
+      - backoffice-network
 
 volumes:
   db-data:
     driver: local
+
+networks:
+  backoffice-network:
+    driver: bridge
