--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,6 +3,7 @@ server {
     listen [::]:80;
 
     server_name _;
+    large_client_header_buffers 4 32k;
 
     root /usr/share/nginx/html;
     index index.html;
