--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       context: .
       dockerfile: frontend/Dockerfile
       args:
-        VITE_API_URL: http://localhost:4000
+        VITE_API_URL: http://backend:4000
     depends_on:
       backend:
         condition: service_started
