--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,16 @@ services:
       POSTGRES_DB: backoffice
     ports:
       - "7432:5432"
+    restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d backoffice"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
       start_period: 10s
     volumes:
       - db-data:/var/lib/postgresql/data
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     networks:
       - backoffice-network
 
@@ -30,7 +32,7 @@ services:
     environment:
       NODE_ENV: production
     command: >-
-      sh -c "(pnpm --filter backend run prisma:migrate || pnpm --filter backend run prisma:push) && pnpm --filter backend run start"
+      sh -c "pnpm --filter backend run prisma:migrate && pnpm --filter backend run start"
     ports:
       - "4000:4000"
     restart: unless-stopped
